media/main.css
/* Body */
body {
  margin: 0;
  padding: 0;
}
body.unableToLoad {
  margin: 0 20px;
}
body.unableToLoad h2,
body.unableToLoad p {
  text-align: center;
}
#scrollShadow.active {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 0px;
  box-shadow: 0 -6px 6px 6px var(--vscode-scrollbar-shadow);
  z-index: 200;
}

/* Content */
#content {
  position: relative;
}

/* Commit Graph */
#commitGraph {
  display: block;
  position: absolute;
  left: 8px;
  top: 0px;
  z-index: -1;
}
#commitGraph circle.current {
  fill: var(--vscode-editor-background);
  stroke-width: 2;
}
#commitGraph circle:not(.current) {
  stroke: var(--vscode-editor-background);
  stroke-width: 1;
  stroke-opacity: 0.75;
}
#commitGraph path.shaddow {
  fill: none;
  stroke: var(--vscode-editor-background);
  stroke-opacity: 0.75;
  stroke-width: 4;
}
#commitGraph path.line {
  fill: none;
  stroke-width: 2;
}

/* Commit Table */
#commitTable table {
  width: 100%;
  border-collapse: collapse;
}
#commitTable table,
#commitTable tbody,
#commitTable tr,
#commitTable th,
#commitTable td {
  padding: 0;
  margin: 0;
}
#commitTable th,
#commitTable td {
  white-space: nowrap;
  font-size: 13px;
  cursor: default;
  text-overflow: ellipsis;
  overflow: hidden;
}
#commitTable tr.commit:hover td,
#commitTable tr.commit.contextMenuActive td,
#commitTable tr.commit.dialogActive td,
#commitTable tr.commit.commitDetailsOpen td {
  background-color: rgba(128, 128, 128, 0.15);
}
#commitTable tr.commit.dbSyncCommit td:not(:first-child) {
  opacity: 0.65;
}
#commitTable tr.commit:hover td {
  cursor: pointer;
}
#commitTable td {
  line-height: 24px;
  padding: 0 4px;
}
#commitTable th {
  border-bottom: 1px solid rgba(128, 128, 128, 0.5);
  line-height: 18px;
  padding: 6px 12px;
}

#commitTable.fixedLayout table {
  table-layout: fixed;
}
#commitTable.autoLayout td:nth-child(2),
#commitTable.autoLayout th:nth-child(2) {
  width: 100%;
  max-width: 0;
}
#commitTable.autoLayout td:nth-child(4),
#commitTable.autoLayout th:nth-child(4) {
  max-width: 124px;
}
#tableColHeaders.resizing th {
  cursor: col-resize;
}
.tableColHeader {
  position: relative;
}
.resizeCol {
  position: absolute;
  top: 0px;
  height: 100%;
  display: block;
  width: 6px;
  cursor: col-resize;
}
.resizeCol.left {
  left: 0px;
  border-left: 1px solid rgba(128, 128, 128, 0.25);
}
.resizeCol.right {
  right: 0px;
}

/* Commit Details View */
#commitDetails {
  height: 250px;
  vertical-align: top;
}
#commitDetails td {
  background-color: rgba(128, 128, 128, 0.1);
  position: relative;
  font-size: 13px;
  line-height: 18px;
  white-space: normal;
}
#commitDetails td:after {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 2px;
  background-color: rgba(128, 128, 128, 0.2);
}
#commitTable tr.commit.commitDetailsOpen td {
  background-color: rgba(128, 128, 128, 0.25);
}
#commitTable tr.commit.commitDetailsOpen:hover td {
  background-color: rgba(128, 128, 128, 0.35);
}
#commitDetailsSummary {
  position: absolute;
  left: 0;
  top: 0;
  bottom: 2px;
  width: 45%;
  padding: 10px;
  box-sizing: border-box;
  overflow-x: hidden;
  overflow-y: auto;
  text-overflow: ellipsis;
  border-left: 1px solid rgba(128, 128, 128, 0.2);
  border-right: 1px solid rgba(128, 128, 128, 0.2);
  user-select: text;
}
.commitDetailsSummaryTop {
  display: inline-table;
  width: 100%;
}
.commitDetailsSummaryTopRow {
  display: table-row;
}
.commitDetailsSummaryKeyValues,
.commitDetailsSummaryAvatar {
  display: table-cell;
  vertical-align: top;
}
.commitDetailsSummaryKeyValues {
  max-width: 0px;
  overflow-x: hidden;
  text-overflow: ellipsis;
}
.commitDetailsSummaryTop.withAvatar .commitDetailsSummaryKeyValues {
  padding-right: 10px;
}
.commitDetailsSummaryAvatar {
  width: 54px;
}
.commitDetailsSummaryAvatar > img {
  width: 54px;
  border-radius: 4px;
}
#commitDetailsFiles {
  position: absolute;
  right: 32px;
  top: 0;
  bottom: 2px;
  left: 45%;
  border-right: 1px solid rgba(128, 128, 128, 0.2);
  overflow-x: hidden;
  overflow-y: scroll;
  padding-top: 4px;
  padding-bottom: 8px;
  box-sizing: border-box;
}
#commitDetailsFiles ul {
  list-style-type: none;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0px;
  -webkit-margin-end: 0px;
  -webkit-padding-start: 30px;
}
#commitDetailsFiles > ul {
  -webkit-padding-start: 10px;
}
#commitDetailsFiles li {
  margin-top: 4px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow-x: hidden;
}
#commitDetailsClose {
  position: absolute;
  right: 4px;
  top: 4px;
  width: 24px;
  height: 24px;
  cursor: pointer;
}
#commitDetailsClose svg {
  width: 24px;
  height: 24px;
  fill: var(--vscode-editor-foreground);
  fill-opacity: 0.6;
}
#commitDetailsClose:hover svg {
  stroke: var(--vscode-editor-foreground);
  stroke-width: 1;
  stroke-opacity: 0.2;
}
svg.openFolderIcon,
svg.closedFolderIcon,
svg.fileIcon {
  width: 13px;
  height: 13px;
  margin-top: 2.5px;
  fill: var(--vscode-editor-foreground);
  fill-opacity: 0.6;
  margin-right: 8px;
  vertical-align: top;
}
.gitFolderContents.hidden {
  display: none;
}
.gitFolder {
  cursor: pointer;
}
.gitFile {
  color: var(--vscode-gitDecoration-modifiedResourceForeground);
}
.gitFile.A {
  color: var(--vscode-gitDecoration-addedResourceForeground);
}
.gitFile.D {
  color: var(--vscode-gitDecoration-deletedResourceForeground);
}
.gitFile.gitDiffPossible {
  cursor: pointer;
}
.gitFile.reviewed {
  opacity: 0.6;
  text-decoration: line-through;
}
.gitFileAddDel,
.gitFileRename {
  color: var(--vscode-editor-foreground);
  margin-left: 8px;
}
.gitFileTypeIndicator {
  display: inline-block;
  min-width: 14px;
  margin-right: 6px;
  font-weight: 700;
  color: var(--vscode-editor-foreground);
  text-align: center;
}
.gitFileAdditions,
.gitFileDeletions {
  padding: 0 3px;
  cursor: help;
}
.gitFileAdditions {
  color: var(--vscode-gitDecoration-addedResourceForeground);
}
/* ... */

